Added row of dominoes blog post

--- a/assets/_base.scss
+++ b/assets/_base.scss
@@ -18,9 +18,9 @@ $font-family: 'Montserrat';
     left: 0;
 }
 
-@mixin old-button {
+@mixin old-button($display: block) {
     border: 1px solid black;
-    display: block;
+    display: $display;
     box-shadow: 2px 2px black;
     outline: none;
     background: $white;
